--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google" value="notranslate">
     <meta name="description" content="PenguinMod is a TurboWarp mod that was made to add tons of cool stuff to allow for crazy projects." />
-    <title>PenguinMod - A mod of TurboWarp</title>
+    <title>Scrooch 3</title>
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     
