--- a/privacy.html
+++ b/privacy.html
@@ -1,52 +1,111 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Privacy Policy</title>
-        <meta charset="utf8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>
-            body {
-                font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-                margin: 0; padding: 0;
-            }
-            header {
-                background-color: hsla(194, 100%, 50%, 1);
-                color: white;
-                text-align: center;
-                padding: 20px 0;
-            }
-            main {
-                max-width: 600px;
-                margin: auto;
-            }
-            @media (prefers-color-scheme: dark) {
-                body { background: #111; color: #eee; }
-                a { color: #4af; }
-            }
-        </style>
-    </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Privacy Policy</title>
+  <link rel="icon" href="https://cattymod.github.io/images/apple-touch-icon.png" />
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      background: #f9f9f9;
+      color: #222;
+      margin: 0;
+      padding: 0 1rem;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
+    }
+    main {
+      max-width: 700px;
+      background: white;
+      padding: 2rem 2.5rem;
+      margin: 3rem 0;
+      border-radius: 10px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    img.logo {
+      width: 80px;
+      margin-bottom: 1rem;
+    }
+    h1 {
+      margin-bottom: 0.5rem;
+    }
+    a {
+      color: #0066cc;
+      text-decoration: none;
+    }
+    a:hover,
+    a:focus {
+      text-decoration: underline;
+    }
+    p {
+      line-height: 1.5;
+      margin: 1rem 0;
+      text-align: left;
+    }
+    h2 {
+      margin-top: 2rem;
+      text-align: left;
+      border-bottom: 2px solid #eee;
+      padding-bottom: 0.3rem;
+    }
+    ul {
+      text-align: left;
+      margin: 1rem 0 1rem 1.5rem;
+      line-height: 1.5;
+    }
+  </style>
+</head>
+<body>
+  <main>
+    <h1>Privacy Policy</h1>
+    <p><strong>Updated: July 2025</strong></p>
 
-    <body>
-        <header>
-            <h1>TurboWarp Privacy Policy</h1>
-        </header>
+    <p>Welcome to my Scratch Mod! Your privacy matters to us. This policy explains how we handle information when you use this Mod. We want everyone to understand this, including kids and their families.</p>
 
-        <main>
-            <!-- UPDATE THIS WHEN MAKING CONTENT CHANGES -->
-            <p><i>Updated September 29th, 2021</i></p>
+    <h2>What Data We Collect</h2>
+    <ul>
+      <li>This Scratch Mod lets you load projects from Scratch by URL or <code>.sb3</code> files.</li>
+      <li>We do <strong>not</strong> collect personal data like your name, email, or location.</li>
+      <li>When loading projects from Scratch, Scratch’s own privacy policy applies. You can read it here: <a href="https://scratch.mit.edu/privacy_policy" target="_blank" rel="noopener noreferrer">Scratch Privacy Policy</a>.</li>
+      <li>This Scratch Mod itself does <strong>not</strong> track you or collect your information.</li>
+      <li>If you use cloud variables in projects, your username and project ID may be temporarily shared with TurboWarp cloud servers that this Scratch Mod uses.</li>
+      <li>This mod does <strong>not</strong> store this information.</li>
+    </ul>
 
-            <p>This document applies to https://turbowarp.org, https://experiments.turbowarp.org, and https://staging.turbowarp.org.</p>
+    <h2>What You Should Know About Privacy</h2>
+    <ul>
+      <li>Do <strong>not</strong> share personal information (like your full name, email, or address) inside your projects.</li>
+      <li>This Mod lets you download your projects but does <strong>not</strong> offer a community feature to share them.</li>
+      <li>Be careful when sharing project files outside this Mod — others can see what’s inside.</li>
+    </ul>
 
-            <p>We may log anonymous aggregated data such as how many people use the site, how often a feature is used, what operating system and browser is used, and diagnostic information such as cache hit ratios.</p>
-            <p>When using cloud variables, the project ID and your username may be logged for up to 14 days.</p>
-            <p>Your randomly generated or chosen username is stored in your browser's local storage. To mitigate the potential to track users with this feature, all randomly generated usernames are anonymized before the server receives them. However, usernames explicitly set by a user may be logged to help prevent abuse.</p>
-            <p>Scratch extensions that require Wi-Fi (such as Translate, Text to Speech, LEGO, micro:bit, etc.) may connect to the Scratch API to implement these features. <a href="https://scratch.mit.edu/privacy_policy/">Refer to the Scratch privacy policy for more information</a>. The Translate extension may instead make requests to a TurboWarp API, which may then forward your request to the Scratch API and log the message being translated and the result for caching and performance.</p>
-            <p>In rare circumstances, connections that are appear to be spam may have their IP logged for up to 24 hours. This happens very infrequently and only in cases of extreme abuse.</p>
-            <p>This document does not apply to third-parties, including other users or bots connected to cloud variables, links to external websites, custom extensions, or some advanced URL parameters.</p>
+    <h2>Supervision and Age Guidelines</h2>
+    <p>We want everyone to use this Scratch Mod safely. Here’s how supervision helps by age:</p>
+    <ul>
+      <li><strong>Ages 3–7:</strong> Adult supervision is very important. Kids this young might not understand privacy risks.</li>
+      <li><strong>Ages 8–12:</strong> Adult supervision is suggested. Kids are learning about privacy but still need guidance.</li>
+      <li><strong>Ages 13 and up:</strong> Kids can mostly use this Mod independently but should remember not to share personal info online or in projects.</li>
+    </ul>
 
-            <h2>Contact</h2>
+    <h2>Cookies and Tracking</h2>
+    <ul>
+      <li>This Mod does <strong>not</strong> use cookies or tracking tools.</li>
+      <li>Loading projects from Scratch means you are subject to Scratch’s privacy policies, which may include tracking like Google Analytics.</li>
+      <li>TurboWarp cloud servers used for cloud variables may temporarily log project IDs and usernames, but This Mod does not control or store this data.</li>
+    </ul>
 
-            <p>Any concerns related to privacy or any other matter should be sent to: <a href="mailto:contact@turbowarp.org">contact@turbowarp.org</a></p>
-        </main>
-    </body>
+    <h2>About Extensions and Packaged Projects</h2>
+    <p>Custom extensions or packaged projects may connect to external services. This Mod does not control these third-party services and is not responsible for their privacy practices.</p>
+
+    <h2>Changes to This Policy</h2>
+    <p>We may update this privacy policy sometimes. Please check here to see the latest version.</p>
+
+    <p>Thanks for using this Scratch Mod and staying safe online! 😊</p>
+  </main>
+</body>
 </html>
